k3s/apps/homepage/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.8.8
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
      volumes:
        - name: config
          configMap:
            name: homepage-config
            items:
              - key: settings.yaml
                path: settings.yaml
              - key: widgets.yaml
                path: widgets.yaml
              - key: services.yaml
                path: services.yaml
              - key: bookmarks.yaml
                path: bookmarks.yaml
